--- a/themes/hugo-tufte/layouts/partials/brand.html
+++ b/themes/hugo-tufte/layouts/partials/brand.html
@@ -1,4 +1,5 @@
 <header class="brand">
+  <!-- <a href="http://iiit.ac.in" id="inst-logo-link" style="text-decoration: none"><img id="inst-logo" src="css/img/iiit-new.png" class="inst-logo"></a> -->
   <h1><a href="{{ "" | absURL }}">{{ .Site.Title}}</a></h1>
   <h2>{{ .Site.Params.subtitle }}</h2>
   {{ partial "nav.html" . }}
