--- a/themes/hugo-tufte/layouts/partials/header.includes.html
+++ b/themes/hugo-tufte/layouts/partials/header.includes.html
@@ -27,3 +27,5 @@
 <link rel="stylesheet" href="{{ "" | absURL }}css/tufte.css">
 <link rel="stylesheet" href="{{ "" | absURL }}css/hugo-tufte.css">
 <link rel="stylesheet" href="{{ "" | absURL }}css/hugo-tufte-override.css">
+
+<link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
