--- a/themes/hugo-tufte/layouts/partials/content.header.talk.html
+++ b/themes/hugo-tufte/layouts/partials/content.header.talk.html
@@ -11,35 +11,8 @@
 {{ if .Params.subtitle }}<p class=subtitle>{{ .Params.subtitle }}</p>{{ end }}
 {{ if or (eq .Type "post") (.Params.meta)  }}
   <span class="content-meta">
-    {{ if .Params.speaker }}
-       <i class="fa fa-user">&nbsp;</i><span class="author">
-         &nbsp;{{ .Params.speaker }}</span> <br>
-    {{ end }}
-
-
-    {{ if not .Params.hidedate }}
-      <i class="fa fa-calendar"></i>
-      &nbsp;{{ .Date.Format "Jan 2, 2006" }}
-    {{end }}
-
-    {{ if not .Params.hidereadtime }}
-      &nbsp;<i class="fa fa-clock-o"></i>
-      &nbsp;{{ .ReadingTime }} min read
-    {{ end }}
-
-    {{ if .Params.categories }}
-      <br>
-      <i class="fa fa-tags"> </i>
-      {{ range .Params.categories }}
-        <a  href="{{ "/categories/" | absURL }}{{ . | urlize }}">{{ . }}</a>
-      {{ end }}
-    {{ end }}
-
+    {{ partial "talk.details.html" . }}
   </span>
-  {{ if .Params.abstract }}
-      <blockquote>  <i>Abstract:</i><br/>
-        {{ .Params.abstract }}</blockquote>
-    {{ end }}
     
 {{ end }}
 {{ end }}
