--- a/themes/hugo-tufte/layouts/partials/footer.html
+++ b/themes/hugo-tufte/layouts/partials/footer.html
@@ -5,17 +5,15 @@
       <li><a href="{{.URL}}">{{.Pre }}{{ .Name }}</a></li>
 		{{ end }}
 		</ul>
-
-  {{ if .Site.Params.showPoweredBy}}
     <p>
-      Theory Seminar is coordinated by IIIT-H faculty: <a href="https://faculty.iiit.ac.in/~lalitha.v/">Lalitha</a>, <a href="https://faculty.iiit.ac.in/~prasad.krishnan/index.html">Prasad</a> & <a href="http://geevi.github.io">Girish</a>. <br/>
-      Powered by <a href="https://gohugo.io">Hugo</a> and the
+  {{ if .Site.Params.showPoweredBy}}
+    
+      Theory Seminar is coordinated by IIIT-H faculty: <a href="https://faculty.iiit.ac.in/~lalitha.v/">Lalitha</a>, <a href="https://faculty.iiit.ac.in/~prasad.krishnan/index.html">Prasad</a> & <a href="http://geevi.github.io">Girish</a>. 
+      Website is powered by <a href="https://gohugo.io">Hugo</a> and the
       <a href="https://github.com/shawnohare/hugo-tufte">Tufte theme</a> adapted by <a href="http://geevi.github.io">Girish</a>.
-    </p>
+    
   {{ end }}
 
-	<div class="copyright">
-	<p>
     {{ with .Site.Params.copyright }}
       {{ . | safeHTML }}
     {{ else }}
@@ -23,7 +21,7 @@
       <a href="{{ .Site.Params.instWebsite }}">{{ with .Site.Params.copyrightHolder }}{{ . }}{{end}}</a>.
     All rights reserved.
     {{end}}
-  </p>
-</div>
+  
+</p>
 </footer>
 {{ partial "body.includes.html" . }}
