--- a/themes/hugo-tufte/layouts/partials/footer.html
+++ b/themes/hugo-tufte/layouts/partials/footer.html
@@ -8,9 +8,9 @@
     <p>
   {{ if .Site.Params.showPoweredBy}}
     
-      Theory Seminar is coordinated by IIIT-H faculty: <a href="https://faculty.iiit.ac.in/~lalitha.v/">Lalitha</a>, <a href="https://faculty.iiit.ac.in/~prasad.krishnan/index.html">Prasad</a> & <a href="http://geevi.github.io">Girish</a>. 
+      Theory Seminar is coordinated by IIIT-H faculty: <a href="https://faculty.iiit.ac.in/~lalitha.v/">Lalitha</a>, <a href="https://faculty.iiit.ac.in/~prasad.krishnan/index.html">Prasad</a> & <a href="http://girishvarma.in">Girish</a>. 
       Website is powered by <a href="https://gohugo.io">Hugo</a> and the
-      <a href="https://github.com/shawnohare/hugo-tufte">Tufte theme</a> adapted by <a href="http://geevi.github.io">Girish</a>.
+      <a href="https://github.com/shawnohare/hugo-tufte">Tufte theme</a> adapted by <a href="http://girishvarma.in">Girish</a>.
     
   {{ end }}
 
