--- a/themes/hugo-tufte/layouts/partials/talk.details.html
+++ b/themes/hugo-tufte/layouts/partials/talk.details.html
@@ -1,16 +1,18 @@
 <span class="content-meta">
         <i class="fa fa-user">&nbsp;</i> <a href="{{ .Params.speakerhomepage }}">{{ .Params.speaker }}</a>, <a href="{{ .Params.speakerinstitutehomepage }}">{{ .Params.speakerinstitute }}</a> <br/>
-        <i> <i class="fa fa-clock-o">&nbsp;</i> {{ dateFormat "3:04PM" .Params.talkdate  }} &nbsp; <i class="fa fa-calendar">&nbsp;</i> {{ dateFormat "2 Jan, 2006" .Params.talkdate  }}</i> <br/>
-        <i class="fa fa-building" aria-hidden="true">&nbsp;</i> <i>{{ .Params.venue }}</i> </br>  
-        {{ if .Params.categories }}
-                <i class="fa fa-tags">&nbsp;</i>
-        {{ range .Params.categories }}
-          <a  href="{{ "" | absURL }}categories/{{ . | urlize }}">{{ . }}</a>,
-        {{ end }}
-      {{ end }}
+        <i class="fa fa-clock-o">&nbsp;</i> <span>{{ dateFormat "3:04PM" .Params.talkdate  }}</span> &nbsp; <i class="fa fa-calendar">&nbsp;</i> <span>{{ dateFormat "2 Jan, 2006" .Params.talkdate  }}</span> <br/>
+        <i class="fa fa-building" aria-hidden="true">&nbsp;</i> <span>{{ .Params.venue }}</span> </br>  
+      
       
     
         <blockquote class="abstract">
         {{ .Params.abstract }}
         </blockquote>
+        {{ if .Params.categories }}
+        <i class="fa fa-tags">&nbsp;</i>
+{{ range .Params.categories }}
+  <a  href="{{ "" | absURL }}categories/{{ . | urlize }}">{{ . }}</a>,
+{{ end }}
+{{ end }}
+
         </span>
